# ABB_YuMi_Motion_Control

./: LICENSE  README.md
ABB_RAPID/RAPID_Modules/: Module_Left_Arm_IRB14000.mod  Module_Right_Arm_IRB14000.mod
ABB_RAPID/RobotStudio_Pack_and_Go/: Alushi_Yumi_EGM_2024.rspag
ABB_RAPID/Station_RobotStudio/Alushi_Yumi_EGM_2024/Controller Data/YuMi_EGM_Alushi_2024/: system.xml
ABB_RAPID/Station_RobotStudio/Alushi_Yumi_EGM_2024/Station/: Alushi_Yumi_EGM_2024.rsstnx  Alushi_Yumi_EGM_2024.rsuser  MetaData.xml
ABB_RAPID/VirtualController/EGM_ABB_IRB14000_YuMi/: RW6system.xml  system.xml
ABB_RAPID/VirtualController/EGM_ABB_IRB14000_YuMi/INTERNAL/: controller.rsf  key.id  system.guid  template.guid
ABB_RAPID/VirtualController/EGM_ABB_IRB14000_YuMi/PRODUCTS/: product.xml
Documentation/Resources/: yumi.urdf
MATLAB/OFFLINE/: ABB_IRB14000_ForwardKinematic_Offline.m  Fixed_Transforms_Base_to_Arms.m
MATLAB/ONLINE/Joint_Regulation/: Joint_Pos_Regulation.m  pidControl.m
MATLAB/ONLINE/Kinematic_Control/: ForwardKinematics_ABB_IRB14000.m  yumi_trajectory_control.m  yumi_trajectory_control_with_obstacle.m  yumi_trajectory_control_with_obstacle_DGBTP.m  yumi_trajectory_planning.m  yumi_where_am_I.m
ROS/src/abb_robot_driver/alushi_yumi_matlab_ros_abb/: README.md  package.xml
ROS/src/abb_robot_driver/alushi_yumi_matlab_ros_abb/config/: yumi_hardware_egm.yaml
ROS/src/abb_robot_driver/alushi_yumi_matlab_ros_abb/launch/: alushi_rws_and_egm_yumi_robot.launch
Simulink/: ForwardKinematic_YuMi.slx  JointRegulation_Yumi.slx  ROS_SIMULINK_Concept_Testing_ABB_6DOF.slx
(+16 files in other folders)
