<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>alushi_yumi_matlab_ros_abb</name>
  <version>0.5.0</version>
  <description>
    contains dependancies for interfacing between MATLAB and ABB RobotStudio using ROS and abb_robot_driver
  </description>
  <maintainer email="alushil@uni.coventry.ac.uk">L.Y.Alushi (Coventry University)</maintainer>
  <license>BSD-3-Clause</license>
  <author>Luca Ymer Alushi</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>abb_egm_hardware_interface</exec_depend>
  <exec_depend>abb_egm_state_controller</exec_depend>
  <exec_depend>abb_rws_service_provider</exec_depend>
  <exec_depend>abb_rws_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
</package>
